<resources>
    <string name="app_name">protea.io</string>
    <string name="main_title">protea.io</string>

    <string name="event_main_name">event</string>
    <string name="story_main_name">story</string>
    <string name="measurement_main_name">measurement</string>

    <string name="button_event_new">New event</string>
    <string name="button_task_new">New task</string>
    <string name="button_story_new">New story</string>
    <string name="button_measurement_new">New indicator measurement</string>

    <string name="button_image_capture">Capture image</string>
    <string name="label_groups">Groups:</string>
    <string name="label_types">Types:</string>
    <string name="label_description">Description</string>
    <string name="label_group">Group</string>
    <string name="label_longitude">Longitude</string>
    <string name="label_latitude">Latitude</string>
    <string name="label_submit">Submit</string>

    <string name="label_event_type">Event type</string>
    <string name="label_story_type">Domain of Change</string>
    <string name="label_measurement_type">Indicator</string>

    <string name="button_key_save">Save API key</string>
    <string name="button_account_setup">Sync Data</string>

    <string name="types_filename">protea_types.txt</string>
    <string name="groups_filename">protea_groups.txt</string>
    <string name="events_filename">protea_events.txt</string>
    <string name="stories_filename">protea_stories.txt</string>
    <string name="measurements_filename">protea_measurements.txt</string>


    <string name="custom_dialog_title">Image not present</string>
    <string name="custom_dialog_message">You have not attached an image. Continue?</string>



</resources>
