<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="org.impactready.teamready.FormActivityFragment">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="64dp"
            android:text="@string/button_image_capture"
            android:id="@+id/button_story_image"
            android:layout_marginTop="-6dp"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/image_object"
            android:scaleType="centerCrop"
            android:contentDescription="Story image" />

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_description"
            android:id="@+id/label_story_description"
            android:paddingLeft="2dp"
            android:paddingTop="4dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_description"
            android:paddingLeft="2dp"
            android:paddingTop="4dp" />

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_story_type"
            android:id="@+id/label_story_type"
            android:paddingLeft="2dp"
            android:paddingTop="4dp" />

        <Spinner
            android:id="@+id/input_story_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="2dp"
            android:paddingTop="4dp" />

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_group"
            android:id="@+id/label_group"
            android:paddingLeft="2dp"
            android:paddingTop="4dp" />

        <Spinner
            android:id="@+id/input_story_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="2dp"
            android:paddingTop="4dp" />

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_longitude"
            android:id="@+id/label_story_longitude"
            android:paddingLeft="2dp"
            android:paddingTop="4dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_longitude"
            android:paddingLeft="2dp"
            android:paddingTop="4dp" />

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_latitude"
            android:id="@+id/label_story_latitude"
            android:paddingLeft="2dp"
            android:paddingTop="4dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_latitude"
            android:paddingLeft="2dp"
            android:paddingTop="4dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="64dp"
            android:textSize="18sp"
            android:id="@+id/input_story_submit"
            android:text="@string/label_submit" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:id="@+id/input_image_location" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:id="@+id/input_object_id" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:id="@+id/input_object_type" />

    </LinearLayout>
</ScrollView>
